# PacE_web_audit

./: .gitignore  README.md  pyproject.toml
.github/: copilot.yml
.github/workflows/: python.yml
pace_aid/: __init__.py  audit.py  brand.py  config.py  crawler.py  indexer.py  main.py  openai_utils.py
tests/: test_audit.py  test_crawler.py  test_main.py  test_openai_utils.py
